Update exomiser-cli BatchFileReader to enable reading of Job objects specified as commands from batch files Update CommandLineJobReader to enable users to specify sample, vcf and assembly independently in the input commands Add 'batch', 'vcf' and 'assembly' options to CommandLineOptionsParser